--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -11,7 +11,7 @@
 			<a href='tools/new'>New tool</a>
 		</li>
 		<li ng-if="current_user">
-			<a href='lists/contributing'>My lists</a>
+			<a href='tool_lists/contributing'>My lists</a>
 		</li>
 		<li ng-if="current_user.is_admin">
 			<a href='attributes/new'>New attribute</a>
