--- a/app/assets/templates/tools/edit.html
+++ b/app/assets/templates/tools/edit.html
@@ -201,9 +201,30 @@
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
         <button ng-click="createOrUpdateTool()" class="btn btn-primary">Save</button>
+        <button ng-if="is_editing" ng-click="startDeleteToolProcess()" class="btn btn-danger">Delete</button>
       </div>
     </div>
 
   </form>
   </div>
+
+  <div class="modal fade">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title">Deleting tool </h4>
+        </div>
+        <div class="modal-body">
+          <p>After deleting this tool only an user with admin privilidges will be able to bring it back into the system.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary" ng-click="completeDeleteToolProcess()"></button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
+
 </div>
