--- a/app/assets/templates/tools/edit.html
+++ b/app/assets/templates/tools/edit.html
@@ -201,14 +201,14 @@
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
         <button ng-click="createOrUpdateTool()" class="btn btn-primary">Save</button>
-        <button ng-if="is_editing" ng-click="startDeleteToolProcess()" class="btn btn-danger">Delete</button>
+        <button ng-if="is_editing" data-toggle="modal" data-target="#deleteModal" class="btn btn-danger">Delete</button>
       </div>
     </div>
 
   </form>
   </div>
 
-  <div class="modal fade">
+  <div class="modal fade" id="deleteModal">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -220,7 +220,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-primary" ng-click="completeDeleteToolProcess()"></button>
+          <button ng-if="is_editing" type="button" class="btn btn-primary" ng-click="deleteTool(data.id)">Delete</button>
         </div>
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
