Deleted tools appear as missing content on tool lists

--- a/app/assets/templates/tool_lists/edit.html
+++ b/app/assets/templates/tool_lists/edit.html
@@ -68,7 +68,7 @@
             </div>
             <div class="col-sm-6">
     					<button ng-click="createOrUpdateList()" class="btn btn-success">Save</button> 
-    	 				<a class="btn btn-warning" href="/lists/contributing">Cancel</a> 
+    	 				<a class="btn btn-warning" href="/tool_lists/contributing">Cancel</a> 
     	 				<button ng-if="is_editing" class="btn btn-danger">Delete</button> 										
             </div>
   				<div class="row">
