--- a/app/assets/templates/tools/detail.html
+++ b/app/assets/templates/tools/detail.html
@@ -57,6 +57,7 @@
 		<div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
         <a ng-click="updateToolUserDetails()" class="btn btn-success">Save</a>
+        <!-- <a ng-click="addToList(data.id)" class="btn btn-info">Add to list</a> -->
         <a ng-if='is_editable' class="btn btn-default" href="/tools/edit/{{data.id}}" role="button">Edit</a>
       </div>
     </div>
