--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -7,8 +7,8 @@
 		<li>
 			<a href='tools'>Tools</a>
 		</li>		
-		<li>
-			<a ng-if="current_user.is_admin" href='tools/featured'>Featured</a>
+		<li ng-if="current_user.is_admin">
+			<a href='tools/featured'>Featured</a>
 		</li>		
 		<li ng-if="current_user">
 			<a href='tools/new'>New tool</a>
