--- a/app/assets/templates/tapor/signin.html
+++ b/app/assets/templates/tapor/signin.html
@@ -5,6 +5,7 @@ Signin
 <ul>
 <li><a href="/users/auth/google_oauth2">Sign in with google</a></li>
 <li><a href="/users/auth/twitter">Sign in with twitter</a></li>
+<li><a href="/users/auth/yahoo">Sign in with yahoo</a></li>
 <li><a href="/sign_out">Sign out</a></li>
 </ul>
 
