--- a/app/assets/templates/attributes/new.html
+++ b/app/assets/templates/attributes/new.html
@@ -47,13 +47,20 @@
 
 					<div class="form-group">
 						<label for="inputIsMultiple" class="col-sm-2 control-label">Is multiple</label>
-						<div class="col-sm-5  ">
+						<div class="col-sm-5">
 							<input type="checkbox" name="multiple" value="multiple" id="inputIsMultiple" ng-model="data.is_multiple">
 						</div>
 					</div>
 
 
+	    		<!-- is required -->
 
+					<div class="form-group">
+						<label for="inputIsMultiple" class="col-sm-2 control-label">Is required</label>
+						<div class="col-sm-5">
+							<input type="checkbox" name="required" value="required" id="inputIsRequired" ng-model="data.is_required">
+						</div>
+					</div>
 
 
 					<div class="form-group">
