--- a/app/assets/templates/tools/edit.html
+++ b/app/assets/templates/tools/edit.html
@@ -117,10 +117,10 @@
 
     <!-- attributes -->
 
-    <div class="form-group" ng-repeat='attribute in data.attribute_types track by $index' >
+    <div class="form-group" ng-repeat='attribute in data.tool_attributes track by $index' >
       <label for="inputName" class="col-sm-2 control-label">{{attribute.name}}</label>
       <div class="col-sm-6">
-         <div multselect is-multiple="attribute.is_multiple" model="attribute.model" name="attribute.name" values="attribute.possible_values"> </div>
+         <div multselect is-multiple="attribute.is_multiple" model="attribute.model" name="attribute.name" values="attribute.attribute_values"> </div>
       </div>
     </div>
    
