Improvements on featured tools

--- a/app/assets/templates/tools/edit.html
+++ b/app/assets/templates/tools/edit.html
@@ -26,8 +26,8 @@
         </span>
         
         <div ng-switch="is_editing">
-          <img ng-switch-when="false" src="{{data.image}}" id="imageContainer" width="450" alt="Image preview...">  
-          <img ng-switch-when="true" src="{{data.image_url}}" id="imageContainer" width="450" alt="Image preview...">
+          <img ng-switch-when="false" src="{{data.image}}" id="imageContainer" width="550">  
+          <img ng-switch-when="true" src="{{data.image_url}}" id="imageContainer" width="550" alt="Image preview...">
         </div>        
 
         
