--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 	  <meta charset="utf-8">
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	  <title>Tapor</title>
+	  <title>TAPoR</title>
 	  <base href="<%=root_url%>" target="_self">
 	  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 	  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -46,10 +46,10 @@
 					</div>
 				</div>
 				<div class="row" id="header">
-					<div class="col-md-1">
-						<a href="<%=root_url%>">TAPoR 3</a>
+					<div class="col-md-5">
+						<a href="<%=root_url%>"><img src="img/tapor/tapor-logo.png"></a>
 					</div>
-					<div class="col-md-8">
+					<div class="col-md-4">
 						Discover research tools for studying texts.
 					</div>
 
