Work on basic tool layout

--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -1,8 +1,54 @@
 
-
-<div class='row' id='current' class='tapor-container'>
+<div ng-controller='TaporIndexCtrl' class='tapor-container'>
+<div class='row'>
 	<div class="col-md-12">
 	
+
+	<!--  -->
+
+	<div id="carousel-featured" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-featured" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-featured" data-slide-to="1"></li>
+    <li data-target="#carousel-featured" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+    <p>Primer</p>
+    </div>
+    <div class="item">
+    <p>Segundo</p>
+    </div>
+    <div class="item">
+    <p>Tercero</p>
+    </div>
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-featured" role="button" data-slide="prev">
+    <span class="fa fa-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-featured" role="button" data-slide="next">
+    <span class="fa fa-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+	<!--  -->
+
+
+	</div>
+</div>
+
+
+<div class='row' id='spheres'>
+	<div class="col-md-12">
+
+
 	<ul>
 		<li>
 			<a href='tools'>Tools</a>
@@ -23,12 +69,7 @@
 			<a href='users'>Users</a>
 		</li>
 	</ul>
-	</div>
-</div>
 
-
-<div class='row' id='spheres'>
-	<div class="col-md-12">
 
 	</div>
 </div>
