--- a/app/assets/templates/tools/edit.html
+++ b/app/assets/templates/tools/edit.html
@@ -11,6 +11,14 @@
       </div>
     </div>
     
+    <!-- name -->
+    <div class="form-group">
+      <label for="inputName" class="col-sm-2 control-label">URL</label>
+      <div class="col-sm-6">
+        <input type="text" class="form-control" id="inputURL" placeholder="URL" ng-model="data.url" required>
+      </div>
+    </div>
+
     <!-- image -->
 
     <div class="form-group">
@@ -22,13 +30,11 @@
 
         <span class="btn btn-default btn-file">
           <!-- Browse <input id='inputImage' type="file" ng-model='data.image_path' ng-change='updateImage'> -->
-          Browse <input type="file" fileread="data.image"/>
+          Browse <input type="file" fileread="data.image_url"/>
         </span>
+                  
+        <img ng-if="data.image_url.length > 0" src="{{data.image_url}}" id="imageContainer" width="550" alt="Image preview...">
         
-        <div ng-switch="is_editing">
-          <img ng-switch-when="false" src="{{data.image}}" id="imageContainer" width="550">  
-          <img ng-switch-when="true" src="{{data.image_url}}" id="imageContainer" width="550" alt="Image preview...">
-        </div>        
 
         
           
@@ -53,7 +59,7 @@
     <div class="form-group">
       <label for="inputStars" class="col-sm-2 control-label">Rating</label>
       <div class="col-sm-6 rating">
-        <div star-rating rating-value="data.tool_ratings[0].stars" on-rating-selected="rateFunction(data.tool_ratings[0].stars)" max="5"></div>
+        <div star-rating rating-value="data.tool_ratings[0].stars" max="5"></div>
       </div>
     </div>   
 
@@ -63,7 +69,7 @@
       <label for="inputTags" class="col-sm-2 control-label">Tags</label>
       <div class="col-sm-6">
         <!-- <input type="text" class="form-control" id="inputTags" placeholder="Tags" ng-model="data.tool_tags.tags"> -->
-        <div selectize="tag_config" options='tag_options' ng-model="data.tool_tags.tags"></div>
+        <selectize config="tag_config" options='tag_options' ng-model="data.tags"></selectize>
 
       </div>
     </div>
